1.新增打包脚本,包括打jar包, 自定义运行环境, 生成可执行文件